refactor(build): add java options to deal with Java 17 (or later) restriction that prevents reflection on JDK internal classes