@@ -24,3 +24,16 @@ libraryDependencies ++= Seq(
 )
 
 dependencyOverrides += "com.github.luben" % "zstd-jni" % zstdJniVersion
+
+fork := true
+
+javaOptions ++= Seq(
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+)
+
+Test / javaOptions ++= javaOptions.value
